k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: emt-app
spec:
  selector:
    app: backend
  ports:
    - port: 9090
      targetPort: 9090
