k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: emt-app
spec:
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None   
  selector:
    app: db
